--- a/hw0_release/hw0.ipynb
+++ b/hw0_release/hw0.ipynb
@@ -664,7 +664,7 @@
     "### Question:\n",
     "Explain in 2-3 sentences what the L, A and B channels are and what happens when you take away the L and A channels.\n",
     "### Answer:\n",
-    "The L represents the brightness of the pixel; the positive number of A represents red and the negative end represents green; the positive number of B represents yellow and the negative end represents blue. When take away the A and B channels, the image will become grayscale."
+    "The L represents the brightness of the pixel; the positive number of A represents red and the negative end represents green; the positive number of B represents yellow and the negative end represents blue. When take away the L and A channels, the image will become blurred, and only the contrast between yellow and blue can be clearly observed."
    ]
   },
   {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
