--- a/hw1_release/hw1.ipynb
+++ b/hw1_release/hw1.ipynb
@@ -585,6 +585,7 @@
    "metadata": {},
    "source": [
     "**Your Answer:** *Write your solution in this markdown cell.*\n",
+    "\n",
     "No, maybe it's because the shelf has many colors and its grey picture is averagely smaller than the template's"
    ]
   },
@@ -869,6 +870,7 @@
    "metadata": {},
    "source": [
     "**Your Answer:** *Write your solution in this markdown cell. Please write your equations in [LaTex equations](http://jupyter-notebook.readthedocs.io/en/latest/examples/Notebook/Typesetting%20Equations.html).*\n",
+    "\n",
     "Since $F$ is separable, so $F=F_1F_2$,$F[m,n]=F_1[m] \\cdot F_2[n]$\n",
     "\n",
     "\\begin{align}\n",
@@ -896,7 +898,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your Answer:** *Write your solution in this markdown cell. Please write your equations in [LaTex equations](http://jupyter-notebook.readthedocs.io/en/latest/examples/Notebook/Typesetting%20Equations.html).*'\n",
+    "**Your Answer:** *Write your solution in this markdown cell. Please write your equations in [LaTex equations](http://jupyter-notebook.readthedocs.io/en/latest/examples/Notebook/Typesetting%20Equations.html).*\n",
     "\n",
     "Doing a direct 2D convolution need $M_1N_1M_2N_2$ multiplication operations, Doing 1D convolutions on rows and columns need $M_1N_1(M_2+N_2)$multiplication operations. The Big-O notation of Doing a direct 2D convolution is $\\mathcal{O}(M_1N_1M_2N_2)​$, the Big-O notation of Doing 1D convolution is $\\mathcal{O}(M_1N_1(M_2+N_2))$ ,Direct 2D convolution is more efficient in general."
    ]
