--- a/hw2_release/hw2.ipynb
+++ b/hw2_release/hw2.ipynb
@@ -12,18 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setup\n",
     "from __future__ import print_function\n",
@@ -74,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +148,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your Answer:** Write your solution in this markdown cell."
+    "**Your Answer:** Write your solution in this markdown cell.\n",
+    "\n",
+    "Increasing the kernel size or sigma would make the image more blurry (smooth)."
    ]
   },
   {
@@ -205,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +284,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your Answer:** Write your solution in this markdown cell."
+    "**Your Answer:** Write your solution in this markdown cell.\n",
+    "\n",
+    "The gradients are very sensitive to the noise in the image; we perform smoothing to reduce the noise of the image."
    ]
   },
   {
@@ -311,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +674,7 @@
     "from edge import canny\n",
     "\n",
     "# Load image\n",
-    "img = io.imread('iguana.png', as_grey=True)\n",
+    "img = io.imread('iguana.png', as_gray=True)\n",
     "\n",
     "# Run Canny edge detector\n",
     "edges = canny(img, kernel_size=5, sigma=1.4, high=0.03, low=0.02)\n",
@@ -728,7 +723,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your Answer:** Write your solution in this markdown cell."
+    "**Your Answer:** Write your solution in this markdown cell.\n",
+    "\n",
+    "The rotated edge will be detected using the same Canny edge detector.\n",
+    "\n",
+    "The magnitude in the original image is:\n",
+    "$$G=\\sqrt{G_{x}^{2}+G_{y}^{2}}=\\left|G_{x}\\right|$$\n",
+    "\n",
+    "The magnitude for the rotated edge is:\n",
+    "$$G^{\\prime}=\\sqrt{G_{x}^{2}+G_{y}^{2}}=\\sqrt{G_{x}^{2} \\cos ^{2} \\theta+G_{x}^{2} \\sin ^{2} \\theta}=\\left|G_{x}\\right|$$"
    ]
   },
   {
@@ -742,7 +745,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your Answer:** Write your solution in this markdown cell."
+    "**Your Answer:** Write your solution in this markdown cell.\n",
+    "\n",
+    " We should decrease the low threshold to fill in the gaps caused by the missing weak edges and increase the high threshold to reduce false positives."
    ]
   },
   {
@@ -755,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -785,8 +790,8 @@
     "    n_correct = 0.0\n",
     "\n",
     "    for img_file in listdir('images/objects'):\n",
-    "        img = io.imread('images/objects/'+img_file, as_grey=True)\n",
-    "        gt = io.imread('images/gt/'+img_file+'.gtf.pgm', as_grey=True)\n",
+    "        img = io.imread('images/objects/'+img_file, as_gray=True)\n",
+    "        gt = io.imread('images/gt/'+img_file+'.gtf.pgm', as_gray=True)\n",
     "\n",
     "        mask = (gt != 5) # 'don't' care region\n",
     "        gt = (gt == 0) # binary image of GT edges\n",
@@ -833,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +858,7 @@
     "from edge import canny\n",
     "\n",
     "# Load image\n",
-    "img = io.imread('road.jpg', as_grey=True)\n",
+    "img = io.imread('road.jpg', as_gray=True)\n",
     "\n",
     "# Run Canny edge detector\n",
     "edges = canny(img, kernel_size=5, sigma=1.4, high=0.03, low=0.02)\n",
@@ -880,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
