--- a/hw0_release/hw0.ipynb
+++ b/hw0_release/hw0.ipynb
@@ -759,7 +759,9 @@
     "### Question:\n",
     "Explain in 2-3 sentences what the H, S and V channels are and what happens when you take away the both the H and S channels.\n",
     "### Answer:\n",
-    "Write your answer here."
+    "Write your answer here.\n",
+    "\n",
+    "H,S and V represent hue, saturation and value respectively. When we take away the H and S channels, the resulting image is similar to the original image in gray scale."
    ]
   },
   {
