--- a/hw6_release/hw6.ipynb
+++ b/hw6_release/hw6.ipynb
@@ -236,17 +236,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/work/anaconda3/envs/CS131/lib/python3.7/site-packages/skimage/io/_io.py:48: UserWarning: `as_grey` has been deprecated in favor of `as_gray`\n",
-      "  warn('`as_grey` has been deprecated in favor of `as_gray`')\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -277,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1208,30 +1200,30 @@
       "For n=10, k=10: average accuracy is 0.297500\n",
       "For n=10, k=20: average accuracy is 0.298750\n",
       "\n",
-      "For n=20, k=1: average accuracy is 0.375000\n",
-      "For n=20, k=5: average accuracy is 0.367500\n",
-      "For n=20, k=10: average accuracy is 0.361250\n",
-      "For n=20, k=20: average accuracy is 0.363750\n",
+      "For n=20, k=1: average accuracy is 0.376250\n",
+      "For n=20, k=5: average accuracy is 0.370000\n",
+      "For n=20, k=10: average accuracy is 0.371250\n",
+      "For n=20, k=20: average accuracy is 0.368750\n",
       "\n",
-      "For n=50, k=1: average accuracy is 0.237500\n",
-      "For n=50, k=5: average accuracy is 0.262500\n",
-      "For n=50, k=10: average accuracy is 0.256250\n",
-      "For n=50, k=20: average accuracy is 0.261250\n",
+      "For n=50, k=1: average accuracy is 0.241250\n",
+      "For n=50, k=5: average accuracy is 0.281250\n",
+      "For n=50, k=10: average accuracy is 0.276250\n",
+      "For n=50, k=20: average accuracy is 0.288750\n",
       "\n",
-      "For n=100, k=1: average accuracy is 0.182500\n",
-      "For n=100, k=5: average accuracy is 0.156250\n",
-      "For n=100, k=10: average accuracy is 0.152500\n",
-      "For n=100, k=20: average accuracy is 0.146250\n",
+      "For n=100, k=1: average accuracy is 0.175000\n",
+      "For n=100, k=5: average accuracy is 0.157500\n",
+      "For n=100, k=10: average accuracy is 0.146250\n",
+      "For n=100, k=20: average accuracy is 0.143750\n",
       "\n",
-      "For n=200, k=1: average accuracy is 0.161250\n",
-      "For n=200, k=5: average accuracy is 0.113750\n",
-      "For n=200, k=10: average accuracy is 0.118750\n",
-      "For n=200, k=20: average accuracy is 0.116250\n",
+      "For n=200, k=1: average accuracy is 0.143750\n",
+      "For n=200, k=5: average accuracy is 0.117500\n",
+      "For n=200, k=10: average accuracy is 0.121250\n",
+      "For n=200, k=20: average accuracy is 0.097500\n",
       "\n",
-      "For n=500, k=1: average accuracy is 0.166250\n",
-      "For n=500, k=5: average accuracy is 0.131250\n",
-      "For n=500, k=10: average accuracy is 0.123750\n",
-      "For n=500, k=20: average accuracy is 0.096250\n"
+      "For n=500, k=1: average accuracy is 0.153750\n",
+      "For n=500, k=5: average accuracy is 0.127500\n",
+      "For n=500, k=10: average accuracy is 0.115000\n",
+      "For n=500, k=20: average accuracy is 0.112500\n"
      ]
     }
    ],
@@ -1286,32 +1278,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "X_proj doesn't have the right shape",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-61346797c31e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;31m# Project using LDA\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mX_train_proj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_pca\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbest_n\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0mX_test_proj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_pca\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbest_n\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/CS131_release/hw6_release/features.py\u001b[0m in \u001b[0;36mtransform\u001b[0;34m(self, X, n_components)\u001b[0m\n\u001b[1;32m    292\u001b[0m         \u001b[0;31m# END YOUR CODE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    293\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 294\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mX_proj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_components\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"X_proj doesn't have the right shape\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    295\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    296\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mX_proj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: X_proj doesn't have the right shape"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For k=1 and n=20\n",
+      "Got 65 / 160 correct => accuracy: 0.406250\n"
      ]
     }
    ],
    "source": [
     "# Based on the cross-validation results above, choose the best value for k,   \n",
     "# retrain the classifier using all the training data, and test it on the test\n",
-    "# data. You should be able to get above 40% accuracy on the test data.\n",
-    "\n",
     "best_k = None\n",
     "best_n = None\n",
     "# YOUR CODE HERE\n",
     "# Choose the best k based on the cross validation above\n",
-    "pass\n",
+    "max=0\n",
+    "for key,value in n_k_to_accuracies.items():\n",
+    "    if np.mean(value)>max:\n",
+    "        max = np.mean(value)\n",
+    "        best_n,best_k=key\n",
     "# END YOUR CODE\n",
     "\n",
     "N = len(X_train)\n",
